# VexelEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/vexel/: utils.h
include/vexel/graphics/: buffer.h  command_buffer.h  cubemap.h  device.h  gl_debugger.h  gl_hooks.h  render_pass.h  sampler.h  texture.h  texture_view.h  utils.h  vertex_attributes.h
include/vexel/math/: interval.h  matrix4.h  projection_matrix.h  rotor.h  utils.h  vector3.h  vector4.h
src/: CMakeLists.txt
src/graphics/: buffer.cpp  command_buffer.cpp  cubemap.cpp  device.cpp  gl_debugger.cpp  render_pass.cpp  sampler.cpp  texture.cpp  texture_view.cpp  vertex_attributes.cpp
